--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     top: -10px
 }
 
-.ms-bg-white{
+.ms-card{
     background-color: white;
 }
 
@@ -37,3 +37,12 @@ h5{
     font-family: "Edu TAS Beginner", cursive;
 }
 
+.hover{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 2;
+    background-color: rgba( 0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+}
